// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse samples Sample: ActionPlansV4 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ActionPlansV4",
    "path": "ActionPlansV4/sfdx-source/LabsActionPlans",
    "pkg": "sfdx-source/LabsActionPlans",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "ActionPlansV4",
    "path": "ActionPlansV4/sfdx-source/unmanaged",
    "pkg": "sfdx-source/unmanaged",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Angular 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Angular",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-Opensource-Library 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Apex-Opensource-Library",
    "path": "Apex-Opensource-Library/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-XML-Serializer 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Apex-XML-Serializer",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Apex-for-Xero 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Apex-for-Xero",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ApexTestKit 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ApexTestKit",
    "path": "ApexTestKit/apex-test-kit",
    "pkg": "apex-test-kit",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ApexTriggerHandler 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ApexTriggerHandler",
    "path": "ApexTriggerHandler/apex-trigger-handler",
    "pkg": "apex-trigger-handler",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Automated-Testing-for-Force 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Automated-Testing-for-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Centralized-Salesforce-Dev-Framework 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Centralized-Salesforce-Dev-Framework",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ConnectApiHelper 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ConnectApiHelper",
    "path": "ConnectApiHelper/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Cumulus 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Cumulus",
    "path": "Cumulus/force-app",
    "pkg": "Cumulus/force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: CustomMetadataLoader 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "CustomMetadataLoader",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: EDA 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "EDA",
    "path": "EDA/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: EnhancedLightningGrid 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "EnhancedLightningGrid",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: FindNearby 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "FindNearby",
    "path": "FindNearby/src",
    "pkg": "FindNearby/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Force.com-Helper-Classes 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Force.com-Helper-Classes",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Force.com-Toolkit-for-Facebook 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Force.com-Toolkit-for-Facebook",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ForceDotComSprintWall 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ForceDotComSprintWall",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Forceea-data-factory 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Forceea-data-factory",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: FormulaShare-DX 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "FormulaShare-DX",
    "path": "FormulaShare-DX/fs-core",
    "pkg": "fs-core",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "FormulaShare-DX",
    "path": "FormulaShare-DX/fs-sample-app",
    "pkg": "./fs-sample-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: HEDAP 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "HEDAP",
    "path": "HEDAP/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: HyperBatch 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "HyperBatch",
    "path": "HyperBatch/src",
    "pkg": "HyperBatch/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Interactions-for-Student-Recruitment 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Interactions-for-Student-Recruitment",
    "path": "extra",
    "pkg": "extra",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "Interactions-for-Student-Recruitment",
    "path": "Interactions-for-Student-Recruitment/src",
    "pkg": "Interactions-for-Student-Recruitment/src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Lightweight-Trigger-Framework 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Lightweight-Trigger-Framework",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Milestones-PM 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Milestones-PM",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Multi-File-Uploader-Force 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Multi-File-Uploader-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: MyTriggers 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "MyTriggers",
    "path": "MyTriggers/MyTriggers",
    "pkg": "MyTriggers",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "MyTriggers",
    "path": "MyTriggers/MyTriggers",
    "pkg": "./MyTriggers",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: NPSP 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "NPSP",
    "path": "NPSP/force-app",
    "pkg": "NPSP/force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: NebulaLogger 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/core",
    "pkg": "./nebula-logger/core",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/async-failure-additions/plugin",
    "pkg": "./nebula-logger/plugins/async-failure-additions/plugin",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/big-object-archiving/plugin",
    "pkg": "./nebula-logger/plugins/big-object-archiving/plugin",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/log-retention-rules/plugin",
    "pkg": "./nebula-logger/plugins/log-retention-rules/plugin",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/logger-admin-dashboard/plugin",
    "pkg": "./nebula-logger/plugins/logger-admin-dashboard/plugin",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/plugins/slack/plugin",
    "pkg": "./nebula-logger/plugins/slack/plugin",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/extra-tests",
    "pkg": "./nebula-logger/extra-tests",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/recipes",
    "pkg": "./nebula-logger/recipes",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "NebulaLogger",
    "path": "NebulaLogger/nebula-logger/unsorted",
    "pkg": "./nebula-logger/unsorted",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ObjectMerge 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ObjectMerge",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Query.apex 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Query.apex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: R-apex 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "R-apex",
    "path": "R-apex/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SFDCRules 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "SFDCRules",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SObjectFabricator 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "SObjectFabricator",
    "path": "SObjectFabricator/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Salesforce-Lookup-Rollup-Summaries 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Salesforce-Lookup-Rollup-Summaries",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Salesforce-Test-Factory 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Salesforce-Test-Factory",
    "path": "Salesforce-Test-Factory/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SalesforceDurableStreamingDemo 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "SalesforceDurableStreamingDemo",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SimpleLightningComponents 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "SimpleLightningComponents",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: SmartFactory-for-Force 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "SmartFactory-for-Force",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: TestDataFactory 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "TestDataFactory",
    "path": "TestDataFactory/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: TriggerX 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "TriggerX",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Visualforce-Multiselect-Picklist 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Visualforce-Multiselect-Picklist",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Volunteers-for-Salesforce 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Volunteers-for-Salesforce",
    "path": "Volunteers-for-Salesforce/src",
    "pkg": "src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: Zippex 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "Zippex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: amoss 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "amoss",
    "path": "amoss/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-dml-manager 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-dml-manager",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-domainbuilder 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-domainbuilder",
    "path": "apex-domainbuilder/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-lambda 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-lambda",
    "path": "apex-lambda/sfdx-source/apex-fp",
    "pkg": "sfdx-source/apex-fp",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-mdapi 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-mdapi",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-query-builder 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-query-builder",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-recipes 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-recipes",
    "path": "apex-recipes/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-rest-route 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-rest-route",
    "path": "apex-rest-route/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-rollup 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/rollup",
    "pkg": "rollup",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/CustomObjectRollupLogger",
    "pkg": "plugins/CustomObjectRollupLogger",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/NebulaLogger",
    "pkg": "plugins/NebulaLogger",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/RollupCallback",
    "pkg": "plugins/RollupCallback",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/plugins/ExtraCodeCoverage",
    "pkg": "plugins/ExtraCodeCoverage",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "apex-rollup",
    "path": "apex-rollup/extra-tests",
    "pkg": "extra-tests",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-sobjectdataloader 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-sobjectdataloader",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-toolingapi 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-toolingapi",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-trigger-actions-framework 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-trigger-actions-framework",
    "path": "apex-trigger-actions-framework/trigger-actions-framework",
    "pkg": "trigger-actions-framework",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: apex-unified-logging 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "apex-unified-logging",
    "path": "apex-unified-logging/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: at4dx 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "at4dx",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "at4dx",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "fflib-apex-common/sfdx-source/apex-common",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "at4dx",
    "path": "force-di/force-di",
    "pkg": "force-di/force-di",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "at4dx",
    "path": "at4dx/sfdx-source/core",
    "pkg": "at4dx/sfdx-source/core",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: automation-components 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-apex-formula-evaluator",
    "pkg": "src-apex-formula-evaluator",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-collections",
    "pkg": "src-collections",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-data",
    "pkg": "src-data",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-flows",
    "pkg": "src-flows",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-messaging",
    "pkg": "src-messaging",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-security",
    "pkg": "src-security",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-strings",
    "pkg": "src-strings",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-ui",
    "pkg": "src-ui",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "automation-components",
    "path": "automation-components/src-utilities",
    "pkg": "src-utilities",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: box-salesforce-sdk 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "box-salesforce-sdk",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: declarative-lookup-rollup-summaries 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/fflib-apexmocks",
    "pkg": "dlrs/libs/fflib-apexmocks",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/fflib-common",
    "pkg": "dlrs/libs/fflib-common",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/lrengine",
    "pkg": "dlrs/libs/lrengine",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/libs/metadataservice",
    "pkg": "dlrs/libs/metadataservice",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/main",
    "pkg": "dlrs/main",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/dlrs/default",
    "pkg": "dlrs/default",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "declarative-lookup-rollup-summaries",
    "path": "declarative-lookup-rollup-summaries/unpackaged/config/test",
    "pkg": "unpackaged/config/test",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: df12-apex-enterprise-patterns 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "df12-apex-enterprise-patterns",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: df12-deployment-tools 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "df12-deployment-tools",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: dreamhouse-sfdx 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "dreamhouse-sfdx",
    "path": "dreamhouse-sfdx/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: einstein-ai 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "einstein-ai",
    "path": "einstein-ai/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: esapi 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "esapi",
    "path": "esapi/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: eventlogging 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "eventlogging",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: ffhttp-core 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "ffhttp-core",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-common 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "fflib-apex-common",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "sfdx-source/apex-common",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-common-samplecode 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-common/sfdx-source/apex-common",
    "pkg": "fflib-apex-common/sfdx-source/apex-common",
    "status": 2,
  },
  Object {
    "errors": Array [],
    "name": "fflib-apex-common-samplecode",
    "path": "fflib-apex-common-samplecode/sfdx-source/apex-common-samplecode",
    "pkg": "fflib-apex-common-samplecode/sfdx-source/apex-common-samplecode",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: fflib-apex-mocks 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "fflib-apex-mocks",
    "path": "fflib-apex-mocks/sfdx-source/apex-mocks",
    "pkg": "sfdx-source/apex-mocks",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: flowtoolbelt 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "flowtoolbelt",
    "path": "flowtoolbelt/force-app",
    "pkg": "force-app",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "flowtoolbelt",
    "path": "flowtoolbelt/force-app-test",
    "pkg": "force-app-test",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: force-di 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "force-di",
    "path": "force-di/force-di",
    "pkg": "force-di",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: forcedotcom-enterprise-architecture 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "forcedotcom-enterprise-architecture",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: forcelog 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "forcelog",
    "path": "forcelog/src",
    "pkg": "src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: grid 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "grid",
    "path": "grid/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: jsonparse 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "jsonparse",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: logger 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "logger",
    "path": "logger/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: processBuilderBlocks 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "processBuilderBlocks",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: promise 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "promise",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: promiseV3 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "promiseV3",
    "path": "promiseV3/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: q 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "q",
    "path": "q/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: quiz-host-app 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "quiz-host-app",
    "path": "quiz-host-app/src",
    "pkg": "src",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: rflib 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "rflib",
    "path": "rflib/rflib",
    "pkg": "rflib",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "rflib",
    "path": "rflib/rflib-fs",
    "pkg": "rflib-fs",
    "status": 0,
  },
  Object {
    "errors": Array [],
    "name": "rflib",
    "path": "rflib/rflib-tf",
    "pkg": "rflib-tf",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sObject-Remote 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sObject-Remote",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: salesforce-bot-toolkit 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "salesforce-bot-toolkit",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: salesforce-limit-monitor 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "salesforce-limit-monitor",
    "path": "salesforce-limit-monitor/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: selector 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "selector",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sendgrid-apex 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sendgrid-apex",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sf-sandbox-post-copy 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sf-sandbox-post-copy",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-convert-attachments-to-chatter-files 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdc-convert-attachments-to-chatter-files",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-oauth-playground 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdc-oauth-playground",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-related-files-lightning 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdc-related-files-lightning",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdc-trigger-framework 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdc-trigger-framework",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdx-mass-action-scheduler 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdx-mass-action-scheduler",
    "path": "sfdx-mass-action-scheduler/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sfdx-simple 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sfdx-simple",
    "path": "sfdx-simple/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sirono-common 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sirono-common",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: sobject-work-queue 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "sobject-work-queue",
    "path": "sobject-work-queue/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: soql-secure 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "soql-secure",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: survey-force 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "survey-force",
    "path": "survey-force/force-app",
    "pkg": "force-app",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: twilio-salesforce 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "twilio-salesforce",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: user-access-visualization 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "user-access-visualization",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: visualforce-table-grid 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "visualforce-table-grid",
    "path": ".",
    "status": 0,
  },
]
`;

exports[`Parse samples Sample: visualforce-typeahead 1`] = `
Array [
  Object {
    "errors": Array [],
    "name": "visualforce-typeahead",
    "path": ".",
    "status": 0,
  },
]
`;
